--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,165 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+  display: inline;
+}
+
+h4 {
+  margin-top: 2.5px;
+}
+
+h5 {
+  margin: 0;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+/*COMPONENTS*/
+.product-card {
+  margin: 2.5vw;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.image-wrapper {
+  width: 100%;
+  height: 380px;
+
+  overflow: hidden;
+}
+
+.product-image {
+  height: auto;
+  transition: transform .5s ease;
+}
+
+.product-image:hover {
+  transform: scale(1.05);
+}
+
+.nav-bar {
+  padding: 10px;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.products {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+  /*can add justify-content: center so for very small screens item is centered but then has issues
+  for larger screens*/
+}
+
+.item-details {
+  margin-bottom: 2.5vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.remove-wrapper {
+  display: flex;
+  justify-content: left;
+  align-items: flex-end;
+  flex-grow: 1;
+}
+
+/*PAGES*/
+.page-wrapper {
+  width: 100vw;
+  height: 100vh;
+  
+  display: flex;
+  flex-direction: column;
+}
+
+.home {
+  width: 100vw;
+
+  display: flex;
+  justify-content: center;
+}
+
+.product-wrapper {
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.product {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.product-left {
+  margin-right: 2.5vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-details {
+  width: min(85vw, 600px);
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-wrapper {
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.cart {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.cart-list {
+  margin-right: 2.5vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.total {
+  display: flex;
+  flex-direction: column;
 }
